# teleop_ws

./: .gitignore  frames_2025-11-29_16.05.49.gv  frames_2025-12-09_10.27.21.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rover_bringup/share/rover_bringup/: package.sh  package.xml
install/rover_description/share/rover_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
src/: requirements.txt
src/arm_serial_bridge/: package.xml  setup.cfg  setup.py
src/arm_serial_bridge/arm_serial_bridge/: arm_serial_bridge.py
src/imu_bridge/: package.xml  setup.cfg  setup.py
src/imu_bridge/imu_bridge/: imu_bridge.py
src/rover_bringup/: package.xml  setup.py
src/rover_bringup/config/: ekf.yaml
src/rover_bringup/launch/: bringup.launch.py  camera.launch.py  description.launch.py  lidar.launch.py  teleop.launch.py
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/launch/: description.launch.py
src/rover_description/meshes/: chassis.STL  wheel1.STL  wheel2.STL  wheel3.STL  wheel4.STL
src/rover_description/urdf/: robot.xacro
src/rover_motor/: package.xml  setup.cfg  setup.py
src/rover_motor/rover_motor/: motor_node.py
src/rover_path_planner/: package.xml  setup.cfg  setup.py
src/rover_path_planner/rover_path_planner/: astar_planner.py  planner_manager.py  rpp_controller.py
src/slam_toolbox_config/: package.xml  setup.cfg  setup.py
src/wifi_bridge/: package.xml  setup.cfg  setup.py
src/wifi_bridge/wifi_bridge/: wifi_bridge.py
(+45 files in other folders)
