<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_motor</name>
  <version>0.0.0</version>
  <description>Motor bridge: cmd_vel to motor pwm</description>
  <maintainer email="mail4mohan27@gmail.com">mohanarangan-t-r</maintainer>
  <license>TODO: License declaration</license>


  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
